Fix: desafio 6 con despliegue de ItemDetails por id en  params

--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -1,4 +1,8 @@
 /****** Header ******/
+.header {
+  margin-bottom: 20px;
+}
+
 .logo {
   width: 45px;
   padding: 0 15px 0 0;    
@@ -8,4 +12,6 @@
   text-decoration: none;
   padding: 0 10px
 }
+
+
 /****** END Header ******/
