--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -11,5 +11,10 @@ h2 {
     color: white;
 }
 
+  /******* Footer ******/
 
+  .mainPageContainer {
+    padding-bottom: 150px;
+ }
+/******* END Footer ******/
 
