--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -15,6 +15,11 @@ h2 {
 
   .mainPageContainer {
     padding-bottom: 150px;
+    text-align: justify;
+ }
+
+ .about-title {
+    margin: 30px 0 30px 0;
  }
 /******* END Footer ******/
 
