Entrega intermedia: Routes aplicado a item/:id y category/:id/:name

--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -13,6 +13,10 @@
   padding: 0 10px
 }
 
+.navbar-nav .nav-link   {
+  color: white !important;
+}
+
 .dropdown-link {
   text-decoration: none;
   color: #03242F !important;
