--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -13,9 +13,9 @@
   padding: 0 10px
 }
 
-.navbar-nav .nav-link   {
+#basic-nav-dropdown  {
   color: white !important;
-}
+}  
 
 .dropdown-link {
   text-decoration: none;
