Desafío 8: CartContext. No funciona onAdd

--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -10,8 +10,13 @@
   
   .link {
     text-decoration: none;
-    padding: 0 10px
+    padding: 0 10px;
+    color: white;
   }
+
+  .link:hover {
+    color: #EEDBAE;
+}
   
   #basic-nav-dropdown  {
     color: white !important;
