--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -1,3 +1,5 @@
+
+
 h2 {
     color: #03242F;
     padding-top: 30px;
@@ -26,7 +28,7 @@ h2 {
 /******* Bonus Track ******/
 .bonusTrackContainer {
     justify-content: space-around;
-    padding: 0 50px 200px 50px;    
+    padding: 50px 50px 250px 50px;    
 }
 
 .bt-description {
@@ -71,13 +73,17 @@ h2 {
     margin: 5px; 
 }
 
+.profile {
+    margin-top: 80px;
+}
+
 /******* END Auth proces  ******/
 
 
 /******* Footer ******/
 
   .mainPageContainer {
-    padding-bottom: 150px;
+    padding-bottom: 200px;
     text-align: justify;
     padding-top: 80px;
  }
