--- a/src/assets/styles/Cart.css
+++ b/src/assets/styles/Cart.css
@@ -1,11 +1,33 @@
 .cart-container {
-    margin-bottom: 200px;
+    margin: 50px 0 350px 50px;
 }
 
 .cart-button {
-    width: 100% !important;
+    width: 60% !important;
+    margin-top: 5px;
 }
 
 .cart-total {
     justify-content: center !important;
+}
+
+.form-btn {
+    background-color: #000000 !important;
+    border: #000000 !important;
+}
+
+.selection-title {
+   margin: 10px; 
+   justify-content: start !important;
+   padding: 0 0 20px 0 !important; 
+}
+
+.no-selection {
+    margin-bottom: 200px;
+}
+
+.form-container {
+    color: #03242F;
+    border: 1px solid #EEDBAE;
+    border-radius: 5px;
 }
